Fix overflow

--- a/src/blocks/modules/showroom/showroom.scss
+++ b/src/blocks/modules/showroom/showroom.scss
@@ -5,7 +5,6 @@
     padding-bottom: 120px;
     background-color: #fdfcef;
     z-index: -1;
-    overflow: hidden;
 
     &::before {
       content: "";
