--- a/src/styles/base/_general.scss
+++ b/src/styles/base/_general.scss
@@ -23,6 +23,7 @@ blockquote {
 
 body {
   font-family: "Roboto", sans-serif;
+  overflow-x:hidden;
 }
 
 * {
